2007-11-30  Kohei Yoshida  <kyoshida@novell.com>

	* util/packExtension.py: added script to pack scsolver as an extension
	at the end of the build run.

2007-11-27  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/translation/de/scsolver.properties: added German
	translation (from scsolver.src file).

	* workben/addon_pkg/translation/en-US/scsolver.properties:
	* workben/addon_pkg/translation/fr/scsolver.properties: fixed Iteration
	timed out text.

2007-11-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/polyeqnsolver.hxx: added #include <exception> to
	fix build breakage on PLD Linux.
	
	* workben/addon_pkg/Makefile.in: changed the extension from zip to oxt,
	and removed hard-coded '-mtune=pentium3'.

2007-11-25  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/build.bat: added crude build script for win32.  
	Everything is hard-coded hence is not configurable (yet).
	
	* workben/addon_pkg/META-INF/manifest.xml: added manifest entry for 
	ProtocolHandler.xcu.

2007-11-21  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/resmgr.cxx: applied fix from Tor Lillqvist to get it to 
	compile with the Microsoft compiler.

2007-11-21  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/matrix.hxx:
	* source/numeric/matrix.cxx: added provision for replacing ublas
	dependency.
	
	* source/ui/basedlg.cxx: removed fprintf statement to get it to build.
	
	* workben/addon_pkg/Makefile.in: modified packaging method to prevent
	.svn contents from being packaged.
	
	* workben/addon_pkg/META-INF/manifest.xml: fixed the shared library
	location.

2007-11-18  Kazunari Hirano  <khirano@gmail.com>

	* workben/addon_pkg/translation/ja/scsolver.properties: added Japanese
	translation.
	
2007-11-18  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/Addons.xcu: added French and Japanese menus.
	
	* workben/addon_pkg/license.txt: removed non-printable characters.
	
	* workben/addon_pkg/Makefile.in: make clean only removes object files 