@@ -1,5 +1,11 @@
 2007-11-30  Kohei Yoshida  <kyoshida@novell.com>
 
+	* util/makefile.mk: package extension at the end of the build run.
+	
+	* util/packExtension.py: a little cleanup.
+
+2007-11-30  Kohei Yoshida  <kyoshida@novell.com>
+
 	* util/packExtension.py: added script to pack scsolver as an extension
 	at the end of the build run.
 
